# fabstir-renderer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  model.rs  resources.rs  texture.rs  utils.rs
