[package]
name = "wgpu-fabstir-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
image = { version = "0.24.4", default-features = false, features = ["png", "jpeg"] }
log = "0.4.20"
pollster = "0.3.0"
tobj = { version = "4.0.0", features = [
    "async",
]}
wgpu = "0.18.0"
winit = "0.29.3"

gltf = "1.3.0"
nalgebra-glm = "0.18.0"
base64 = "0.21.5"
getrandom = { version = "0.2", features = ["js"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.11"
blake3 = "1.3.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1.0.0"
futures = "0.3"
web-sys = { version = "0.3", features = [
    'Request', 'RequestInit', 'Response', 'Window',
    "Document",
    "Window",
    "Element",
    "Location",
    "Performance",
]}
serde-wasm-bindgen = "0.6.1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

# WASM specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"

wgpu = { version = "0.18.0", features = ["webgl"]}




[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
 

# Exports to Rust and C/C++ library
[lib]
crate-type = ["cdylib", "rlib"]